@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.470 2007/02/06 11:11:39 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.471 2007/02/06 12:19:27 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -76,6 +76,9 @@ PH/15 Flush SMTP output before delaying, unless control=no_delay_flush is set.
 PH/16 Add ${if forany and ${if forall.
 
 PH/17 Added dsn_from option to vary the From: line in DSNs.
+
+PH/18 Flush SMTP output before performing a callout, unless control =
+      no_callout_flush is set.
 
 
 Exim version 4.66
